k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinion
  labels:
    name: infinion
    environment: production
