k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-svc
  namespace: infinion
  labels:
    app: weather-api
spec:
  type: LoadBalancer
  selector:
    app: weather-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  sessionAffinity: None
